--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "author": "aktarulislam.com",
   "devDependencies": {
+    "@material-ui/core": "^4.11.3",
     "@types/chrome": "^0.0.132",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
+    "fontsource-roboto": "^4.0.0",
     "html-webpack-plugin": "^4.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
